--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "cors": "2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.17.1",
+    "heroku": "^7.42.13",
     "stripe": "^6.28.0"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1",
+    "concurrently": "^5.3.0",
     "nodemon": "^1.19.1"
   }
 }
